Add container for color options and create random button

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <h1>Etch a Sketch</h1>
   <button class="size-button">Grid Size</button>
   <div class="container"></div>
+  <div class="color-options">
+    <button class="random-button">Random</button>
+  </div>
 </body>
 </html>
