Create button for shading and plain color style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <button class="size-button">Grid Size</button>
   <div class="container"></div>
   <div class="color-options">
+    <button class="plain-button">Plain</button>
     <button class="random-button">Random</button>
+    <button class="shading-button">Shading</button>
   </div>
 </body>
 </html>
